--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Projects and Stuff</title>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
     * {
@@ -34,7 +34,7 @@
 
             <a href="index.php">Home</a>
             <a href="/blog/html/pages/underconstruction.html">About</a>
-            <a href="/blog/html/pages/home.html">Articles</a>
+            <a href="/html/pages/home.html">Articles</a>
             <a href="/blog/html/pages/underconstruction.html">MCmods</a>
             <a href="/blog/html/pages/underconstruction.html">Archive</a>
             <a href="/blog/html/pages/underconstruction.html">Downloads</a>
