--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Projects and Stuff</title>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
     * {
@@ -17,11 +17,11 @@
     <div class="container">
 
         <div class="header">
-            <img src="/blog/src/gifs/lamp.gif" alt="TITLE">
-            <img src="/blog/src/immagini/title.png" alt="TITLE"
+            <img src="src/gifs/lamp.gif" alt="TITLE">
+            <img src="src/immagini/title.png" alt="TITLE"
             style="position: center">
-            <img src="/blog/src/gifs/lamp.gif" alt="TITLE">
-            <img src="/blog/src/gifs/anybrow.gif" alt="TITLE">
+            <img src="src/gifs/lamp.gif" alt="TITLE">
+            <img src="src/gifs/anybrow.gif" alt="TITLE">
 
 
 
@@ -33,11 +33,11 @@
             <hr color="0000FF">
 
             <a href="index.php">Home</a>
-            <a href="/blog/html/pages/underconstruction.html">About</a>
-            <a href="/html/pages/home.html">Articles</a>
-            <a href="/blog/html/pages/underconstruction.html">MCmods</a>
-            <a href="/blog/html/pages/underconstruction.html">Archive</a>
-            <a href="/blog/html/pages/underconstruction.html">Downloads</a>
+            <a href="html/pages/underconstruction.html">About</a>
+            <a href="html/pages/home.html">Articles</a>
+            <a href="html/pages/underconstruction.html">MCmods</a>
+            <a href="html/pages/underconstruction.html">Archive</a>
+            <a href="html/pages/underconstruction.html">Downloads</a>
 
             <hr color="0000FF">
 
@@ -54,7 +54,7 @@
 
                     <!-- PAGINA 1 -->
 
-                    <a href="../blog/html/pages/pagina1.html">
+                    <a href="html/pages/pagina1.html">
                         <h2>Da testo a Morse con Arduino</h2>
                     </a>
 
@@ -63,7 +63,7 @@
                     <h5>Semplicemente arduino leggera in input una o piu' stringhe e le tradurra' in morse, poi
                         facendo suonare un buzzer ed accendere un led trasmettera' il seganale codificato
                     </h5>
-                    <img src="../blog/src/immagini/vista2.jpg" alt="image" width="40%">
+                    <img src="src/immagini/vista2.jpg" alt="image" width="40%">
 
 
                     <!--  <div class="fakeimg" style="height:400px;">Image</div> -->
@@ -81,9 +81,9 @@
 
             </style>
 
-            <img src="/blog/src/gifs/anybrow.gif" alt="TTITLE">
-            <img src="/blog/src/gifs/worldwideweb_badge.gif" alt="TITLE">
-            <img src="/blog/src/gifs/psbutton.gif" alt="TITLE">
+            <img src="src/gifs/anybrow.gif" alt="TTITLE">
+            <img src="src/gifs/worldwideweb_badge.gif" alt="TITLE">
+            <img src="src/gifs/psbutton.gif" alt="TITLE">
 
 
 
