--- a/html/pages/pagina1.html
+++ b/html/pages/pagina1.html
@@ -2,7 +2,7 @@
 <html>
   <title>Projects and Stuff</title>
 <head>
-<link rel="stylesheet" type="text/css" href="/blog/css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
