--- a/html/pages/home.html
+++ b/html/pages/home.html
@@ -18,7 +18,7 @@
 <div class="container">
 
 <div class="header">
-  <img src="src/gifs/lamp.gif" alt="TITLE">
+  <img src="../src/gifs/lamp.gif" alt="TITLE">
   <img src="src/immagini/title.png" alt="TITLE"
   style="position: center">
   <img src="src/gifs/lamp.gif" alt="TITLE">
