--- a/html/pages/pagina1.html
+++ b/html/pages/pagina1.html
@@ -2,7 +2,7 @@
 <html>
   <title>Projects and Stuff</title>
 <head>
-<link rel="stylesheet" type="text/css" href="https://ezalb98.github.io/ProjectsAndStuff/">
+<link rel="stylesheet" type="text/css" href="https://ezalb98.github.io/ProjectsAndStuff/css/styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -17,11 +17,11 @@
   
   <div class="header">
 
-    <img src="../src/gifs/lamp.gif" alt="TITLE">
-    <img src="../src/immagini/title.png" alt="TITLE"
+    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/lamp.gif" alt="TITLE">
+    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/title.gif" alt="TITLE"
     style="position: center">
-    <img src="../src/gifs/lamp.gif" alt="TITLE">
-    <img src="../src/gifs/anybrow.gif" alt="TITLE"> 
+    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/lamp.gif" alt="TITLE">
+    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/anybrow.gif" alt="TITLE"> 
 
     
   </div>
