forse ho finito

--- a/html/pages/home.html
+++ b/html/pages/home.html
@@ -18,11 +18,11 @@
 <div class="container">
 
 <div class="header">
-  <img src="../src/gifs/lamp.gif" alt="TITLE">
-  <img src="src/immagini/title.png" alt="TITLE"
+  <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/lamp.gif" alt="TITLE">
+  <img src="https://ezalb98.github.io/ProjectsAndStuff/src/immagini/title.png" alt="TITLE"
   style="position: center">
-  <img src="src/gifs/lamp.gif" alt="TITLE">
-  <img src="src/gifs/anybrow.gif" alt="TITLE">
+  <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/lamp.gif" alt="TITLE">
+  <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/anybrow.gif" alt="TITLE">
 
 
 
@@ -34,11 +34,11 @@
 <hr color="0000FF">
 
 <a href="index.php">Home</a>
-<a href="html/pages/underconstruction.html">About</a>
-<a href="html/pages/home.html">Articles</a>
-<a href="html/pages/underconstruction.html">MCmods</a>
-<a href="html/pages/underconstruction.html">Archive</a>
-<a href="html/pages/underconstruction.html">Downloads</a>
+<a href="https://ezalb98.github.io/ProjectsAndStuff/html/pages/underconstruction.html">About</a>
+<a href="https://ezalb98.github.io/ProjectsAndStuff/html/pages/home.html">Articles</a>
+<a href="https://ezalb98.github.io/ProjectsAndStuff/html/pages/underconstruction.html">MCmods</a>
+<a href="https://ezalb98.github.io/ProjectsAndStuff/html/pages/underconstruction.html">Archive</a>
+<a href="https://ezalb98.github.io/ProjectsAndStuff/html/pages/underconstruction.html">Downloads</a>
 
 <hr color="0000FF">
 
@@ -55,7 +55,7 @@
   
         <!-- PAGINA 1 -->
         
-          <a href="html/pages/pagina1.html"><h2>Da testo a Morse con Arduino</h2>
+          <a href="https://ezalb98.github.io/ProjectsAndStuff/html/pages/pagina1.html"><h2>Da testo a Morse con Arduino</h2>
         </a>
     
         <h4>Primo Esperimento, Nov 2, 2022</h4>
@@ -63,7 +63,7 @@
         <h5>Semplicemente arduino leggera in input una o piu' stringhe e le tradurra' in morse, poi 
           facendo suonare un buzzer ed accendere un led trasmettera' il seganale codificato
         </h5>
-        <img src="src/immagini/vista2.jpg" alt="image"width="40%" >  
+        <img src="https://ezalb98.github.io/ProjectsAndStuff/src/immagini/vista2.jpg" alt="image"width="40%" >  
   
   
       <!--  <div class="fakeimg" style="height:400px;">Image</div> -->
@@ -85,9 +85,9 @@
 
     </style>
 
-    <img src="src/gifs/anybrow.gif" alt="TTITLE" >  
-    <img src="src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
-    <img src="src/gifs/psbutton.gif" alt="TITLE" >  
+    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/anybrow.gif" alt="TTITLE" >  
+    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
+    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/psbutton.gif" alt="TITLE" >  
 
 
 
