--- a/html/pages/pagina1.html
+++ b/html/pages/pagina1.html
@@ -58,17 +58,17 @@
 
 
     <video width="320" height="240" controls>
-        <source src="https://ezalb98.github.io/ProjectsAndStuff/src/video/morse.mp4" type="video/mp4">
+        <source src="../src/video/morse.mp4" type="video/mp4">
         
       Your browser does not support the video tag.
       </video>
     
  <h3>Schema:</h3>
- <img src="https://ezalb98.github.io/ProjectsAndStuff/src/immagini/immagine.png" alt="funny GIF" width="40%">
+ <img src="../src/immagini/immagine.png" alt="funny GIF" width="40%">
 
  <h3>Download the Code: </h3>
- <a href="https://ezalb98.github.io/ProjectsAndStuff/src/code/morse.ino" download>
-  <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/floppysave.gif" alt="Download">
+ <a href="../src/code/morse.ino" download>
+  <img src="../src/gifs/floppysave.gif" alt="Download">
 </a>
 
  </div>
@@ -82,9 +82,9 @@
 
     </style>
 
-    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/anybrow.gif" alt="TTITLE" >  
-    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
-    <img src="https://ezalb98.github.io/ProjectsAndStuff/src/gifs/psbutton.gif" alt="TITLE" >  
+    <img src="../src/gifs/anybrow.gif" alt="TTITLE" >  
+    <img src="../src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
+    <img src="../src/gifs/psbutton.gif" alt="TITLE" >  
 
 
 
