--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <hr color="0000FF">
 
             <a href="index.php">Home</a>
-            <a href="html/pages/underconstruction.html">About</a>
-            <a href="html/pages/home.html">Articles</a>
-            <a href="html/pages/underconstruction.html">MCmods</a>
-            <a href="html/pages/underconstruction.html">Archive</a>
-            <a href="html/pages/underconstruction.html">Downloads</a>
+            <a href="html/underconstruction.html">About</a>
+            <a href="html/home.html">Articles</a>
+            <a href="html/underconstruction.html">MCmods</a>
+            <a href="html/underconstruction.html">Archive</a>
+            <a href="html/underconstruction.html">Downloads</a>
 
             <hr color="0000FF">
 
