--- a/html/home.html
+++ b/html/home.html
@@ -2,7 +2,7 @@
 <html>
   <title>Projects and Stuff</title>
 <head>
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
@@ -18,11 +18,11 @@
 <div class="container">
 
 <div class="header">
-  <img src="/src/gifs/lamp.gif" alt="TITLE">
-  <img src="/src/immagini/title.png" alt="TITLE"
+  <img src="../src/gifs/lamp.gif" alt="TITLE">
+  <img src="../src/immagini/title.png" alt="TITLE"
   style="position: center">
-  <img src="/src/gifs/lamp.gif" alt="TITLE">
-  <img src="/src/gifs/anybrow.gif" alt="TITLE">
+  <img src="../src/gifs/lamp.gif" alt="TITLE">
+  <img src="../src/gifs/anybrow.gif" alt="TITLE">
 
 
 
@@ -34,11 +34,11 @@
 <hr color="0000FF">
 
 <a href="index.php">Home</a>
-<a href="/html/underconstruction.html">About</a>
-<a href="/html/home.html">Articles</a>
-<a href="/html/underconstruction.html">MCmods</a>
-<a href="/html/underconstruction.html">Archive</a>
-<a href="/html/underconstruction.html">Downloads</a>
+<a href="../html/underconstruction.html">About</a>
+<a href="../html/home.html">Articles</a>
+<a href="../html/underconstruction.html">MCmods</a>
+<a href="../html/underconstruction.html">Archive</a>
+<a href="../html/underconstruction.html">Downloads</a>
 
 <hr color="0000FF">
 
@@ -55,7 +55,7 @@
   
         <!-- PAGINA 1 -->
         
-          <a href="/html/pagina1.html"><h2>Da testo a Morse con Arduino</h2>
+          <a href="../html/pagina1.html"><h2>Da testo a Morse con Arduino</h2>
         </a>
     
         <h4>Primo Esperimento, Nov 2, 2022</h4>
@@ -85,9 +85,9 @@
 
     </style>
 
-    <img src="/src/gifs/anybrow.gif" alt="TTITLE" >  
-    <img src="/src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
-    <img src="/src/gifs/psbutton.gif" alt="TITLE" >  
+    <img src="../src/gifs/anybrow.gif" alt="TTITLE" >  
+    <img src="../src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
+    <img src="../src/gifs/psbutton.gif" alt="TITLE" >  
 
 
 
