--- a/html/pagina1.html
+++ b/html/pagina1.html
@@ -17,11 +17,11 @@
   
   <div class="header">
 
-    <img src="/src/gifs/lamp.gif" alt="TITLE">
-    <img src="/src/gifs/title.gif" alt="TITLE"
+    <img src="../src/gifs/lamp.gif" alt="TITLE">
+    <img src="../src/gifs/title.gif" alt="TITLE"
     style="position: center">
-    <img src="/src/gifs/lamp.gif" alt="TITLE">
-    <img src="/src/gifs/anybrow.gif" alt="TITLE"> 
+    <img src="../src/gifs/lamp.gif" alt="TITLE">
+    <img src="../src/gifs/anybrow.gif" alt="TITLE"> 
 
     
   </div>
@@ -64,11 +64,11 @@
       </video>
     
  <h3>Schema:</h3>
- <img src="/src/immagini/immagine.png" alt="funny GIF" width="40%">
+ <img src="../src/immagini/immagine.png" alt="funny GIF" width="40%">
 
  <h3>Download the Code: </h3>
- <a href="/src/code/morse.ino" download>
-  <img src="/src/gifs/floppysave.gif" alt="Download">
+ <a href="../src/code/morse.ino" download>
+  <img src="../src/gifs/floppysave.gif" alt="Download">
 </a>
 
  </div>
@@ -82,9 +82,9 @@
 
     </style>
 
-    <img src="/src/gifs/anybrow.gif" alt="TTITLE" >  
-    <img src="/src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
-    <img src="/src/gifs/psbutton.gif" alt="TITLE" >  
+    <img src="../src/gifs/anybrow.gif" alt="TTITLE" >  
+    <img src="../src/gifs/worldwideweb_badge.gif" alt="TITLE" >  
+    <img src="../src/gifs/psbutton.gif" alt="TITLE" >  
 
 
 
