--- a/html/pagina1.html
+++ b/html/pagina1.html
@@ -18,7 +18,7 @@
   <div class="header">
 
     <img src="../src/gifs/lamp.gif" alt="TITLE">
-    <img src="../src/gifs/title.gif" alt="TITLE"
+    <img src="../src/immagini/title.png" alt="TITLE"
     style="position: center">
     <img src="../src/gifs/lamp.gif" alt="TITLE">
     <img src="../src/gifs/anybrow.gif" alt="TITLE"> 
@@ -64,7 +64,7 @@
       </video>
     
  <h3>Schema:</h3>
- <img src="../src/immagini/immagine.png" alt="funny GIF" width="40%">
+ <img src="../src/immagini/Immagine.png" alt="funny GIF" width="40%">
 
  <h3>Download the Code: </h3>
  <a href="../src/code/morse.ino" download>
