--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <!-- PAGINA 1 -->
 
-                    <a href="html/pages/pagina1.html">
+                    <a href="html/pagina1.html">
                         <h2>Da testo a Morse con Arduino</h2>
                     </a>
 
