--- a/html/home.html
+++ b/html/home.html
@@ -33,7 +33,7 @@
 <div class="under_header">
 <hr color="0000FF">
 
-<a href="index.php">Home</a>
+<a href="../index.php">Home</a>
 <a href="../html/underconstruction.html">About</a>
 <a href="../html/home.html">Articles</a>
 <a href="../html/underconstruction.html">MCmods</a>
@@ -63,7 +63,7 @@
         <h5>Semplicemente arduino leggera in input una o piu' stringhe e le tradurra' in morse, poi 
           facendo suonare un buzzer ed accendere un led trasmettera' il seganale codificato
         </h5>
-        <img src="/src/immagini/vista2.jpg" alt="image"width="40%" >  
+        <img src="../src/immagini/vista2.jpg" alt="image"width="40%" >  
   
   
       <!--  <div class="fakeimg" style="height:400px;">Image</div> -->
