--- a/html/pagina1.html
+++ b/html/pagina1.html
@@ -67,7 +67,7 @@
  <img src="../src/immagini/Immagine.png" alt="funny GIF" width="40%">
 
  <h3>Download the Code: </h3>
- <a href="../src/code/morse.ino" download>
+ <a href="../src/code/morse/morse.ino" download>
   <img src="../src/gifs/floppysave.gif" alt="Download">
 </a>
 
