--- a/html/pagina1.html
+++ b/html/pagina1.html
@@ -18,8 +18,12 @@
   <div class="header">
 
     <img src="../src/gifs/lamp.gif" alt="TITLE">
-    <img src="../src/immagini/title.png" alt="TITLE"
-    style="position: center">
+
+    <a href="../index.html" home>
+
+      <img src="../src/immagini/title.png" alt="TITLE"
+      style="position: center">
+    </a>
     <img src="../src/gifs/lamp.gif" alt="TITLE">
     <img src="../src/gifs/anybrow.gif" alt="TITLE"> 
 
