--- a/html/home.html
+++ b/html/home.html
@@ -33,7 +33,11 @@
 <div class="under_header">
 <hr color="0000FF">
 
-<a href="../index.html">Home</a>
+<a href="../index.html" home>
+
+  <img src="../src/immagini/title.png" alt="TITLE"
+  style="position: center">
+</a>
 <a href="../html/underconstruction.html">About</a>
 <a href="../html/home.html">Articles</a>
 <a href="../html/underconstruction.html">MCmods</a>
