--- a/html/home.html
+++ b/html/home.html
@@ -19,8 +19,11 @@
 
 <div class="header">
   <img src="../src/gifs/lamp.gif" alt="TITLE">
-  <img src="../src/immagini/title.png" alt="TITLE"
-  style="position: center">
+  <a href="../index.html" home>
+
+    <img src="../src/immagini/title.png" alt="TITLE"
+    style="position: center">
+  </a>
   <img src="../src/gifs/lamp.gif" alt="TITLE">
   <img src="../src/gifs/anybrow.gif" alt="TITLE">
 
@@ -33,11 +36,7 @@
 <div class="under_header">
 <hr color="0000FF">
 
-<a href="../index.html" home>
-
-  <img src="../src/immagini/title.png" alt="TITLE"
-  style="position: center">
-</a>
+<a href="../index.html">Home</a>
 <a href="../html/underconstruction.html">About</a>
 <a href="../html/home.html">Articles</a>
 <a href="../html/underconstruction.html">MCmods</a>
