--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="under_header">
             <hr color="0000FF">
 
-            <a href="index.php">Home</a>
+            <a href="index.html">Home</a>
             <a href="html/underconstruction.html">About</a>
             <a href="html/home.html">Articles</a>
             <a href="html/underconstruction.html">MCmods</a>
